--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
 
 	<title>Verisma</title>
 
-	<script src="libs/gsap/gsap.min.js" defer></script>
-	<script src="libs/gsap/ScrollTrigger.min.js" defer></script>
-	<script src="libs/gsap/ScrollSmoother.min.js" defer></script>
-
+	
 	<link rel="stylesheet" href="css/main.css">
-	<script src="js/app.js" defer></script>
+	
 
 </head>
 <body>
@@ -34,10 +31,14 @@
 		<div class="content">
 			<!-- header -->
 			<header class="hero-section">
-				<img data-speed=".6" class="hero" src="images/head-fon-2.png" alt="Alt" >
+				<img data-speed=".6" class="hero" src="images/head-bg-600.png" alt="Alt" >
 				<div class="container">
+					
 					<div data-speed=".75" class="main-header">
-						<h1 class="main-title">creative scroll</h1>
+						<h1 class="main-title">
+							VERISMA
+							<span id="typed">OIL</span>
+						</h1>
 					</div>
 				</div>
 			</header>
@@ -93,7 +94,7 @@
 			</div>
 			<!-- main portfolio or content end -->
 			<!-- footer -->
-			<footer class="footer">
+			<!-- <footer class="footer">
 				<div class="container">
 					<div class="footer-main">
 						<div class="footer-flex">
@@ -138,11 +139,16 @@
 						</div>
 					</div>
 				</div>
-			</footer>
+			</footer> -->
 			<!-- footer end -->
 
 		</div>
 	</div>
 
+	<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+	<script src="libs/gsap/gsap.min.js"></script>
+	<script src="libs/gsap/ScrollTrigger.min.js" ></script>
+	<script src="libs/gsap/ScrollSmoother.min.js" ></script>
+	<script src="js/app.js" ></script>
 </body>
 </html>
