ended form block

--- a/sendForm.html
+++ b/sendForm.html
@@ -27,10 +27,11 @@
                     </p>
                 </div>
                 <form>
-                    <input type="text" name="name" placeholder="Ваше Имя"/>
-                    <input type="text" name="phone" placeholder="+7(___)__-__-__"/>
-                    <input type="email" name="email" placeholder="Email"/>
-                    <textarea name="text" cols="30" rows="10" placeholder="Сообщения"></textarea>
+                    <input type="text" name="name" placeholder="Ваше Имя" required autocomplete="off"/>
+                    <input type="text" name="phone" placeholder="+7(___)__-__-__" required autocomplete="off"/>
+                    <input type="email" name="email" placeholder="Email" autocomplete="off"/>
+                    <textarea name="text" cols="30" rows="10" placeholder="Сообщения" autocomplete="off"></textarea>
+					<button type="button">Отправить</button>
                 </form>
             </div>
         </div>
