--- a/sendForm.html
+++ b/sendForm.html
@@ -26,12 +26,12 @@
                         tempor amount scrolling.
                     </p>
                 </div>
-                <form>
+                <form class="form-send">
                     <input type="text" name="name" placeholder="Ваше Имя" required autocomplete="off"/>
-                    <input type="text" name="phone" placeholder="+7(___)__-__-__" required autocomplete="off"/>
+                    <input type="text" name="phone" id="phone" placeholder="+7(___)__-__-__" required autocomplete="off"/>
                     <input type="email" name="email" placeholder="Email" autocomplete="off"/>
                     <textarea name="text" cols="30" rows="10" placeholder="Сообщения" autocomplete="off"></textarea>
-					<button type="button">Отправить</button>
+					<button type="submit">Отправить</button>
                 </form>
             </div>
         </div>
@@ -85,7 +85,8 @@
 				</div>
 			</footer> 
 			<!-- footer end -->
-
-    <script src="./js/app.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script src="https://unpkg.com/imask"></script>
+    <script src="./js/sendForm.js"></script>
 </body>
 </html>
